--- a/Clase7.ipynb
+++ b/Clase7.ipynb
@@ -6,12 +6,24 @@
    "source": [
     "#  Clase 7: Analisis de datos y repaso de otras clases\n",
     "\n",
-    "Para esta clase trabajaremos con los datos de precios de petroleo"
+    "Para seguir el contenido de este cuaderno [dar clic aquí](https://nbviewer.jupyter.org/github/camilogavo/EstadisticaR/blob/master/Clase7.ipynb)\n",
+    "\n",
+    "Los ejercicios pueden ser reproducidos directamente en RStudio.\n",
+    "\n",
+    "Para esta clase trabajaremos con los datos de precios de petroleo utilizando paquetes de Tidyverse:\n",
+    "\n",
+    "* Cargar datos\n",
+    "* Inspeccion e identificacion de datos faltantes\n",
+    "* Imputacion de datos\n",
+    "* Cruces de tablas\n",
+    "* Agregacion de datos (Tablas dinamicas)\n",
+    "* Correlaciones\n",
+    "* Taller\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 199,
    "metadata": {
     "collapsed": true
    },
@@ -181,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 200,
    "metadata": {
     "collapsed": true
    },
@@ -193,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 202,
    "metadata": {
     "scrolled": false
    },
@@ -241,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 205,
    "metadata": {
     "scrolled": true
    },
@@ -351,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 206,
    "metadata": {
     "scrolled": true
    },
@@ -416,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +451,7 @@
      "output_type": "stream",
      "text": [
       "Classes ‘tbl_df’, ‘tbl’ and 'data.frame':\t144 obs. of  3 variables:\n",
-      " $ ano_mes   : Date, format: \"2007-01-01\" \"2007-02-01\" ...\n",
+      " $ ano_mes   : chr  \"2007-01-01\" \"2007-02-01\" \"2007-03-01\" \"2007-04-01\" ...\n",
       " $ prom_brent: num  53.7 57.6 62.1 67.5 67.2 ...\n",
       " $ prom_wti  : num  54.5 59.3 60.4 64.1 63.5 ...\n",
       "Classes ‘tbl_df’, ‘tbl’ and 'data.frame':\t144 obs. of  3 variables:\n",
@@ -457,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
